--- a/src/presentation/styles/antd.scss
+++ b/src/presentation/styles/antd.scss
@@ -149,10 +149,7 @@
         color: #535353;
         flex: 1 1 0%;
         justify-content: center;
-        padding-bottom: 10px;
-        padding-top: 10px;
-        padding-left: 10px;
-        padding-right: 10px;
+        padding: 0 10px 10px;
       }
     }
   }
